css/styles.css
/* Styles for the web page */
@import url(http://fonts.googleapis.com/css?family=Ubuntu);

/* The entire web page */

body {
	/*background-image: url(../img/noisy_net.png);*/
	background-color: #FFF;
	color: #000;

}

header {
	background-color: ;
	overflow: hidden;
}

a {
	color: #3D72A4;
}

@media (min-width: 1px) {
  	.container {
		max-width: 500px; 
  	}
}

@media (min-width: 819px) {
	.container {
		max-width: 819px;
	}
}

@media (min-width: 1400px) {
  	.container {
		max-width: 1400px; 
  	}
}

.container {
	margin-top: 25px;
	margin-bottom: 50px;
	padding: 0;
}	

.site-title {
	font-family: 'Ubuntu' sans-serif;
	text-align: center;
}

.pull-left {
	float: left;
}

.pull-right {
	float: right;
}

/* The header section */

header {
	overflow: hidden;
}

nav ul {
	padding: 0;
}

@media (min-width: 1px) {
	nav li {
		font-size: 1.5em;
	}
}

@media (min-width: 400px) {
	nav li {
		font-size: 2em;
	}
}

@media (min-width: 819px) {
	nav li {
		font-size: 3em;
	}
}

@media (min-width: 1400px) {
	nav li {
		font-size: 4em;
	}
}

nav li {
		list-style-type: none;
		text-align: center;
		display: inline-block;
		padding-right: .5em;
		padding-left: .5em;
	}


nav a {
	display: block;
}

nav a:hover {
	text-decoration: none;
	color: black;
}

.title {
	width: 40%;
}
/* The main page content */



.search-wrapper {
	color: white;
	background: rgba(0, 0, 0, 1);
	z-index: 10;
	padding: 2em;
	top: 20%;
	left: 25%;
}

.search-wrapper p {
	opacity: 1;
}	

.search input {
	width: 100%;
	height: 2em;
	padding-right: 20%;
}

.search button {
	width: 20%;
	height: 2em;
	z-index: 15;
	float: right;
	position: relative;
	top: -2em;

}

@media (min-width: 1px) {
  	.search-wrapper {
		width: 100%;
  	}

  	.search-wrapper p {
		font-size: 2em;
	}

	.carousel-control {
		display: none;
	}

	.carousel-indicators {
		display: none;
	}
}

@media (min-width: 819px) {
	.search-wrapper {
		width: 50%;
		position: absolute;
	}

	.search-wrapper p {
		font-size: 3em;
	}
	.carousel-control {
		display: inline-block;
	}

	.carousel-indicators {
		display: inline-block;
	}
}

@media (min-width: 1400px) {
	.search-wrapper p {
		font-size: 4em;
	}
	.carousel-control {
		display: inline-block;
	}

	.carousel-indicators {
		display: inline-block;
	}
}

.search-bar input {
	width: 100%;
	height: 2em;
	padding-right: 20%;
}

.search-bar button {
	width: 20%;
	height: 2em;
	z-index: 15;
	float: right;
	position: relative;
	top: -2em;

}

#pics {
	box-shadow: 2px 2px 50px;
}
/* Map Page */

body, .container, .detail-area, html, .information-container, .map-area, .row {
	height: 95%;
}

.review-list h2 {
	margin-top: 0px;
	text-align: center;
}

h1 {
	font-size: 25px;
}

.review-list li {
	margin-top: 5px;
}

.detail-area, .map-area, .review-container {
	background-image: url(../img/brushed.png);
}

.map-area {
	float: left;
	padding: 0;
}

@media (min-width: 1px) {
	.map-area {
		width: 100%;
	}

	.detail-area {
		display: none;
	}
}

@media (min-width: 819px) {
	.map-area {
		width: 59%;
	}

	.detail-area {
		width: 40%;
		display: inline-block;
	}
}

@media (min-width: 1400px) {
  	.map-area {
		width: 70%;
	}

	.detail-area {
		width: 29%;
	}
}

.detail-area {
	box-shadow: 1px -1px 20px inset;
	padding: 0px;
}

.map-container {
	height: 100%;


}

.row {
	margin-left: 0;
	margin-right: 0;
}

.redo-search-wrapper {
	width: 75%;
	height: 4em;
	bottom: 5%;
	right: 12%;
	color: white;
	position: absolute;
	background: rgba(0, 0, 0, .6);
	z-index: 10;
	padding: 1em;
}

.apartment-information, .review-list {
	padding: 1em;
}

.apartment-information {
	height: 70%;
	overflow: auto;
	padding-top: 0px;
}

.review-list {
	height: 30%;
	overflow: auto;
}

.review-list {
	border-top: 5px solid #3D72A4;

}
.template, .rank-name, .apartment-template, .review-template {
	display: none;
}

.rank {
	color: #0645AD;
	cursor: pointer;
}

.rank:hover {
	text-decoration: underline;
}

.apartment-img {
	width: 40%;
	float: left;
	margin-right: 1em;
}

.address {
	clear: both;
	padding-top: 1em;
}

.reviews {
	clear: both;
	margin-top: 2em;
}

.reviewer-name, .review-rating, .duration {
	display: inline;
	font-weight: bold;
}

.review-rating {
	color: #3D72A4;
}

.review-text {
	clear: both;
}
/* Submit a review page */

.form-group {
	overflow: hidden;
}

.stay-form {
	width: 8em;
}

.rating-form {
	width: 8em;
}

.submit-review {
	float: right;
	margin-right: 15px;
	margin-top: 10px;
}

.review-info h2 {
	margin-top: 0px;
}

.review-container {
	box-shadow: 2px 2px 20px;
	padding: 10px;
}

ul li {
	list-style: none;
}

